- Updated file paths for images * All images will live in the same 'images' folder - Fixed positioning for 1% copy block so the arrow and text is aligned - Fixed the server positioning for IE9
***IE 9 is all set.

--- a/app/styles/base/_typography.scss
+++ b/app/styles/base/_typography.scss
@@ -2,7 +2,7 @@
 @include font-face(lubalin-light, '../../fonts/lubalin/lubalingraphstd-book-webfont', 300, normal);
 @include font-face(lubalin-heavy, '../../fonts/lubalin/lubalingraphstd-demi-webfont', 600, normal);
 @include font-face(helvetica-neue, '../../fonts/helvetica-neue/2C72D1_0_0', normal, normal);
-@include font-face(helvetica-neue-light, '../../fonts/helvetica-neue/helvetica-neue-light', normal, normal);
+@include font-face(helvetica-neue-light, '../../fonts/helvetica-neue/2C6636_0_0', normal, normal);
 
 body, .copy, %copy  {
 	font-family: $helvetica;
