--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -29,6 +29,9 @@
 @import 'sections/resources';
 @import 'sections/footer';
 
+
+
+// we need to move these to a IE specific partial
 .footer, .header, .section, .menu, .nav, .article {display: block;}
 
 
@@ -36,6 +39,7 @@
 .ie9 {
   .every-day-society { margin-top: 20px; }
   .globe-surface { margin-left: -235px; }
+  .server-row {bottom: -35px !important;}
 }
 
 // footer {display: block;}
